[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/tool_and_weapon/ironPunch.png" type="Texture" id=1]
[ext_resource path="res://weapon_and_tool/IronPunch.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="Animation" id=2]
resource_name = "punch"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, -56 ), Vector2( 80, -32 ), Vector2( 40, -56 ), Vector2( 40, -56 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 56 ), Vector2( 80, 32 ), Vector2( 40, 56 ), Vector2( 40, 56 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dealDamage"
} ]
}

[node name="ironPunch" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40, -56 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="CollisionShape2D"]
position = Vector2( -83.06, -19.5788 )
rotation = -1.0472
scale = Vector2( -0.0712887, 0.0712887 )
texture = ExtResource( 1 )
offset = Vector2( -288.606, 1049.16 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 40, 56 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite2" type="Sprite" parent="CollisionShape2D2"]
position = Vector2( -80, 24 )
rotation = -2.12844
scale = Vector2( 0.071, 0.071 )
texture = ExtResource( 1 )
offset = Vector2( -288.606, 1049.16 )

[node name="punch_attack" type="AnimationPlayer" parent="."]
anims/punch = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_ironPunch_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ironPunch_body_exited"]
